--- a/_includes/common_head.html
+++ b/_includes/common_head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <title>{{ page.title }} | Project Saturn</title>
 <link rel="stylesheet" href="/style/main.css">
-<link rel="stylesheet" href="/style/bootstrap.css">
+<link rel="stylesheet" href="https://github.com/webbling/Project-Saturn/blob/master/style/bootstrap.css">
 <link rel="stylesheet" href="/style/highlight/dracula.css">
 <script src="/script/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
