--- a/style/bootstrap.css
+++ b/style/bootstrap.css
@@ -4058,6 +4058,8 @@ input[type="button"].btn-block {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  margin-right: 10vw;
+  margin-left: 10vw;
 }
 
 .nav-link {
