--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                    List of Blog Posts
+                    Blog Posts
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     {% for post in site.posts reversed %}
