--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark intro fixed-top">
+<nav class="navbar navbar-expand navbar-dark bg-darker intro fixed-top">
     <a class="navbar-brand" href="/" style="font-size: 2vh;">Project Saturn</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
