--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
     <div class="pt-5">
       <div class="pt-5">
         <h1>{{ page.title }}</h1>
-        <p style="color: lightgray;">{{ page.date | date: "%B %d, %Y"}}</p>
+        <p style="color: #437C79;">{{ page.date | date: "%B %d, %Y"}}</p>
         {{ page.content }}
       </div>
     </div>
